--- a/src/templates/overlay.html
+++ b/src/templates/overlay.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RAH Telemetry Overlay</title>
+    <title>RAH iRacing Overlay</title>
     <link rel="stylesheet" href="/static/css/styles.css">
     <script src="/static/js/socket.io.min.js"></script>
     <script src="/static/js/script.js"></script>
